app/styles/refset.styl
blue = #5B83AD
yellow = #FFFFE0

body
  padding 25px
  //font 14px "Lucida Grande", Helvetica, Arial, sans-serif
  font-family proxima-nova-1, proxima-nova-2, sans-serif

h1
h2
h3
  font-family : museo-sans-1, museo-sans-2 , Georgia, Verdana, "Bitstream Vera Sans", "DejaVu Sans", Tahoma, Geneva, Arial, Sans-serif

#page-header
  height 7em
  img
    width 6em
    float left
  h1
    padding-top 0.5em
    padding-left 3em
    font-family: click-clack-1, click-clack-2, serif
  button
    float right

#plan .terminal
  float: right;

#details .toggle.btn
  float: right

.concept .btn
  display: block

.concept .btn.has-concept
  float: right

